# daxio

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  daxio.c  dimm.h  dimm_ndctl.c  util.c  util.h  vec.h
doc/: CMakeLists.txt
tests/: CMakeLists.txt  daxsize
